--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,21 +1,18 @@
-.App {
-  text-align: center;
-}
+* {
+box-sizing: border-box;}
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background: peachpuff;
 }
-
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 300px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 2rem;
+  text-align: center;
   color: white;
 }
 
@@ -23,11 +20,3 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
